@@ -8,6 +8,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ## [Unreleased]
 ### Changed
 - [UPDATE_SYSTEM] Lock/unlock vulture packages between upgrades
+- [UPDATE_SYSTEM] Properly stop crontabs during upgrades
 ### Fixed
 - [UPDATE_SYSTEM] Ensure secadm version stays up-to-date with the kernel version
 
